# ros-stage-sim

devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/include/third_task/: Coordinates.h  Distance.h  DistanceRequest.h  DistanceResponse.h
devel/lib/dfs_exploration/: dfs_explorer.py
devel/lib/first_task/: dfs_explorer.py
devel/lib/pkgconfig/: dfs_exploration.pc  first_task.pc  second_task.pc  third_task.pc
devel/lib/python3/dist-packages/third_task/msg/: _Coordinates.py
devel/lib/python3/dist-packages/third_task/srv/: _Distance.py
devel/lib/second_task/: reset_position.py
devel/lib/third_task/: distance_service.py  turtlebot3_pointop_key.py
devel/share/common-lisp/ros/third_task/msg/: Coordinates.lisp  _package.lisp  _package_Coordinates.lisp  third_task-msg.asd
devel/share/common-lisp/ros/third_task/srv/: Distance.lisp  _package.lisp  _package_Distance.lisp  third_task-srv.asd
devel/share/dfs_exploration/cmake/: dfs_explorationConfig.cmake
devel/share/first_task/cmake/: first_taskConfig.cmake
devel/share/gennodejs/ros/third_task/msg/: Coordinates.js
devel/share/gennodejs/ros/third_task/srv/: Distance.js  _index.js
devel/share/roseus/ros/third_task/: manifest.l
devel/share/roseus/ros/third_task/msg/: Coordinates.l
devel/share/roseus/ros/third_task/srv/: Distance.l
devel/share/second_task/cmake/: second_taskConfig.cmake
devel/share/third_task/cmake/: third_task-msg-paths.cmake  third_taskConfig.cmake
src/dfs_exploration/: CMakeLists.txt  package.xml
src/dfs_exploration/launch/: dfs_exploration.launch
src/dfs_exploration/world/: circle.png:Zone.Identifier  dfs_world.world
src/first_task/: CMakeLists.txt  package.xml
src/first_task/launch/: dfs_exploration.launch
src/second_task/: CMakeLists.txt
src/second_task/config/: config.yaml
src/second_task/launch/: second_task.launch
src/second_task/scripts/: config.yaml  reset_position.py  robot_motion.py
src/second_task/worlds/: second_task.world
src/third_task/: CMakeLists.txt  package.xml
src/third_task/launch/: turtlebot3_empty_world.launch
src/third_task/msg/: Coordinates.msg
src/third_task/scripts/: distance_service.py  modified_pointop.py  turtlebot3_pointop_key.py
src/third_task/srv/: Distance.srv
